backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-pod
spec:
  replicas: 2
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: backend-container
          image: abdihakim3541/yolo:1.0.2
          workingDir: /usr/src/app/backend
          command: ["npm", "start"]
          ports:
            - containerPort: 5000
