client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client-container
          image: abdihakim3541/yolo:1.0.2
          ports:
            - containerPort: 3000
