mongodb-statefulset.yml
apiVersion: apps/v1    
kind: StatefulSet
metadata:
  name: mongodb
spec:
  serviceName: "mongodb-service"
  replicas: 2
  selector:
    matchLabels:
      role: mongo
      component: database
  template:
    metadata:
      labels:
        role: mongo
        component: database
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mongodb-container
          image: mongo:latest
          command:
            - mongod
            - "--replSet"
            - rs0
          ports:
            - containerPort: 27017
