backend-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 5000
      targetPort: 5000
