backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: LoadBalancer
  selector:
    component: web
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
