client-service.yml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  type: LoadBalancer
  selector:
    component: web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
