client-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-ingress
spec:
  defaultBackend:
    service:
      name: client-service
      port:
        number: 3000
